--- a/CheckOpetServer/packages.config
+++ b/CheckOpetServer/packages.config
@@ -2,4 +2,7 @@
 <packages>
   <package id="MSTest.TestAdapter" version="1.1.11" targetFramework="net452" />
   <package id="MSTest.TestFramework" version="1.1.11" targetFramework="net452" />
+  <package id="Selenium.Support" version="3.3.0" targetFramework="net452" />
+  <package id="Selenium.WebDriver" version="3.3.0" targetFramework="net452" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.28.0" targetFramework="net452" />
 </packages>
