Add logs (cuidar com caminhos no appconfig quando rodar em outra máquina)

--- a/CheckOpetServer/App.config
+++ b/CheckOpetServer/App.config
@@ -2,6 +2,7 @@
 <configuration>
   <appSettings>
     <add key="chromedriverPath" value="C:\Users\camilacardoso\Desktop\CheckOpetServer"/>
+    <add key="logPath" value="C:\Users\camilacardoso\Desktop\CheckOpetServer\Logs\LogTesteOpetServer.txt"/>
     <add key="urlAlunoOnline" value="http://academico.opet.com.br/lyceump/aonline/logon.asp"/>
     <add key="urlEntrada" value="http://academico.opet.com.br/lyceump/aonline/avisos.asp"/>
     <add key="login" value="1201500669"/>
