--- a/CheckOpetServer/CheckOpetServer.csproj
+++ b/CheckOpetServer/CheckOpetServer.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="AlunoOnlineTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WriteLog.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
