throw exception, caminhos e mstest configurado para copiar no output

--- a/CheckOpetServer/CheckOpetServer.csproj
+++ b/CheckOpetServer/CheckOpetServer.csproj
@@ -68,7 +68,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="MSTest.exe" />
+    <Content Include="MSTest.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
