--- a/CheckOpetServer/App.config
+++ b/CheckOpetServer/App.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="chromedriverPath" value="C:\Users\camilacardoso\Desktop\CheckOpetServer"/>
-    <add key="logPath" value="C:\Users\camilacardoso\Desktop\CheckOpetServer\Logs\LogTesteOpetServer.txt"/>
+    <add key="chromedriverPath" value="C:\CheckOpetServer"/>
+    <add key="logPath" value="C:\CheckOpetServer\Logs\LogTesteOpetServer.txt"/>
     <add key="urlAlunoOnline" value="http://academico.opet.com.br/lyceump/aonline/logon.asp"/>
     <add key="urlEntrada" value="http://academico.opet.com.br/lyceump/aonline/avisos.asp"/>
-    <add key="login" value="1201500669"/>
-    <add key="senha" value="1201500669"/>
+    <add key="login" value="1201500000"/>
+    <add key="senha" value="1201500000"/>
   </appSettings>
 </configuration>
