--- a/CheckOpetServer/CheckOpetServer.csproj
+++ b/CheckOpetServer/CheckOpetServer.csproj
@@ -68,6 +68,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="chromedriver.exe" />
     <Content Include="MSTest.exe">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
