--- a/CheckOpetServer/App.config
+++ b/CheckOpetServer/App.config
@@ -5,7 +5,13 @@
     <add key="logPath" value="C:\CheckOpetServer\Logs\LogTesteOpetServer.txt"/>
     <add key="urlAlunoOnline" value="http://academico.opet.com.br/lyceump/aonline/logon.asp"/>
     <add key="urlEntrada" value="http://academico.opet.com.br/lyceump/aonline/avisos.asp"/>
-    <add key="login" value="1201500000"/>
-    <add key="senha" value="1201500000"/>
+    <add key="login" value="1201500521"/>
+    <add key="senha" value="1201500521"/>
+
+	  <add key="urlLogin" value="https://www.opensubtitles.org/pt"/>
+	  <add key="loginOs" value="anarchyosemite"/>
+	  <add key="senhaOs" value="street1234"/>
+	  
   </appSettings>
+	
 </configuration>
