--- a/CheckOpetServer/CheckOpetServer.csproj
+++ b/CheckOpetServer/CheckOpetServer.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="chromedriver.exe" />
+    <Content Include="Handlenium.dll" />
     <Content Include="MSTest.exe">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
